2007-03-13  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf.h,
	* gameswf/gameswf_render.(cpp,h),
	* gameswf/gameswf_render_handler_ogl.cpp:
	The beginning of job on the runing create_library_movie() & 
	create_library_movie_inst in separate threads. Advance thread is
	the main thread therefore in the create_library_movie thread opengl
	is not accessible and we can't use opengl functions for creating
	textures. We save image in system memory and then layout it to video
	memory when it's required.
	* base/image.(cpp,h): added image type to image_base (rgb, rgba, ...)
	* base/tu_opengl_includes.h: added wglGetCurrentContext() declaration,
	it is used to find out if opengl is accessible
	
2007-03-13  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_queue.h: added destructor which pops elements from queue
	* gameswf/gameswf_as_classes/as_netstream.(cpp,h): fixed memory leaks
	& simplified netstream

2007-03-13  Vitaly Alexeev <tishka92@yahoo.com>

	Porting to Linux (gcc 3.2.2)
	* base/ear_clip_triangulate_impl.h: fixed gcc compilation error
	* gameswf/gameswf_action.(cpp,h):  fixed gcc compilation warning
	* gameswf/gameswf_impl.h: cleanup
	* gameswf/gameswf_test_ogl.cpp: SDL_VIDEORESIZE ==> todo
	* gameswf/gameswf_mutex.(cpp,h): updated includes
	* gameswf/gameswf_video_base.cpp: reordered initializations of vars
	in struct declaration
	* gameswf/gameswf_as_classes/as_netstream.(cpp,h): simplified & 
	made more readable read_frame() function

2007-03-11  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_test_ogl.cpp: added printf for debugging
	* gameswf/gameswf.h,
	* gameswf/gameswf_render_handler_ogl.cpp,
	* gameswf/gameswf_video_base.(cpp,h),
	* gameswf/gameswf_render.(cpp,h),
	* gameswf/gameswf_video_ogl.(cpp,h),
	* gameswf/gameswf_video_impl.cpp,
	* gameswf/gameswf_as_classes/as_netstream.(cpp,h):
	OpenGL is accessible only from one thread,
	therefore we are forced to move OpenGL calls to the main thread
	