@@ -27,9 +27,6 @@ namespace gameswf
 		bitmap_info*	create_bitmap_info_rgba(image::rgba* im);
 		YUV_video*	create_YUV_video();
 
-		void	delete_bitmap_info(bitmap_info* bi);
-		void	delete_YUV_video(YUV_video* vi);
-
 		// Bracket the displaying of a frame from a movie.
 		// Fill the background color, and set up default
 		// transforms, etc.
