@@ -1,3 +1,15 @@
+2007-03-15  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* base/image.(cpp,h): added ~image_base(),
+	moved ~rgb(), ~rgba() and ~alpha() code to ~image_base()
+	* gameswf/gameswf.h,
+	* gameswf/gameswf_render.h: 
+	* gameswf/gameswf_render_handler_ogl.h: 
+	added ~bitmap_info() that memory did not leak,
+	removed useless delete_bitmap_info() & delete_YUV_video(),
+	layout_row() ==> layout_alpha()
+	* gameswf/gameswf_as_classes/as_netstream.cpp: fixed memory leaks
+
 2007-03-13  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* gameswf/gameswf.h,
